--- a/homestyle.css
+++ b/homestyle.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Zen Kaku Gothic Antique', sans-serif;
+}
+
 .title-bar{
     background-color: lightblue;
     color: aliceblue;
@@ -61,6 +65,10 @@ h1{
     width: auto;
     padding: 0px;
     margin: 0px;
+}
+
+a{
+    color: teal;
 }
 
 .entry {
