--- a/recipestyle.css
+++ b/recipestyle.css
@@ -1,22 +1,23 @@
 /* Author: Megan Lew */
 
 body{
-    background-color:teal;
+    background-color:lightblue;
     height: 600px;
+    font-family: 'Zen Kaku Gothic Antique', sans-serif;
 }
 
 .content{
     height: 100vh;
     padding: 30px 0;
-    background-color: teal;
+    background-color: lightblue;
 }
 
 .content-left {
-    background-color: teal;
+    background-color: lightblue;
 }
 
 .content-right {
-    background-color: teal;
+    background-color: lightblue;
 }
 
 .content-left-image{
