--- a/recipestyle.css
+++ b/recipestyle.css
@@ -79,7 +79,7 @@ a:hover{
     flex-direction: column;
     align-items: center;
     margin-right: 20px;
-    color: black;
+    color: gray;
 }
 
 .recipe-tab i{ /*icon*/
@@ -87,6 +87,6 @@ a:hover{
 }
 
 .recipe-tab-active { /*active tab*/
-    color: white;
-    border-bottom: white 2px solid;
+    color: teal;
+    border-bottom: teal 2px solid;
 }
