--- a/client/recipestyle.css
+++ b/client/recipestyle.css
@@ -80,6 +80,11 @@ a:hover{
     align-items: center;
     margin-right: 20px;
     color: gray;
+    cursor: pointer;
+}
+
+.recipe-tab:hover{
+    color: teal;
 }
 
 .recipe-tab i{ /*icon*/
