--- a/client/homestyle.css
+++ b/client/homestyle.css
@@ -8,14 +8,15 @@ body {
 }
 
 #left-side-bar {
-    background-image: url('./texture.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-image: url('./shelf.jpg');
+    background-size: 100%;
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
     height: max-content;
     min-height: calc(100vh - 60px);
     padding: 5px;
     padding-top: 10px;
+
 }
 
 .ingredient-list{
