Added back button to login page

--- a/client/login.css
+++ b/client/login.css
@@ -44,9 +44,9 @@ button, input, optgroup, select, textarea {
 
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 a:hover {
-    color: white;
+    color: teal;
 }
